<resources>
    <!-- app -->
    <string name="app_name">Telefonicom</string>

    <!-- button -->
    <string name="login_staff_button">Login</string>
    <string name="login_guest_button">Kundenlogin</string>
    <string name="send_contact_button">Senden</string>

    <!-- textbox -->
    <string name="txtbox_id">ID (Vorname_Nachname)</string>
    <string name="txtbox_password">Passwort</string>
    <string name="txtbox_forename">Vorname</string>
    <string name="txtbox_surename">Nachname</string>
    <string name="txtbox_phone">Mobil-Nummer</string>
    <string name="txtbox_email">Email</string>
    <string name="txtbox_subject">Betreff</string>
    <string name="txtbox_msg">Nachricht</string>

    <!-- label -->
    <string name="label_name">Name:</string>
    <string name="label_no_profile">Kein Profil gefunden...</string>

    <!-- action item -->
    <string name="action_contact">Kontakt</string>
    <string name="action_news">News</string>
    <string name="action_profile">Profil</string>
    <string name="action_view">Profil Liste</string>
    <string name="action_map">Shops</string>
    <string name="action_logout">Abmelden</string>

    <!-- Notifications -->
    <string name="notification_sent">Email wurde versendet!</string>
    <string name="notification_invalid_ID">ID ungültig!</string>
    <string name="notification_password_empty">Passwort fehlt!</string>
    <string name="notification_id_empty">ID fehlt!</string>
    <string name="notification_forename_empty">Vorname fehlt!</string>
    <string name="notification_surename_empty">Nachname fehlt!</string>
    <string name="notification_phone_empty">Mobil-Nummer fehlt!</string>
    <string name="notification_email_empty">Email fehlt!</string>
    <string name="notification_subject_empty">Betreff fehlt!</string>
    <string name="notification_msg_empty">Nachricht fehlt!</string>
    <string name="notification_forename_invalid">Vorname ungültig!</string>
    <string name="notification_surename_invalid">Nachname ungültig!</string>
    <string name="notification_phone_invalid">Mobil-Nummer ungültig!</string>
    <string name="notification_subject_invalid">Betreff zu kurz/lang!</string>
    <string name="notification_msg_invalid">Nachricht zu kurz/lang!</string>
    <string name="notification_email_invalid">Email ungültig!</string>

    <!-- Error codes -->
    <string name="error_0">Error code 0: Server error!</string>
    <string name="error_1">Error code 1: Falscher login!</string>
    <string name="error_2">Error code 2: Internet fehler!</string>

</resources>
